src/app/pages/candidate/job-listing/job-listing.component.scss
@import "/src/assets/scss/candidate_dashboard.scss";

* {
  // font-family: lato !important;

  .mat-icon {
    font-family: "Material Icons" !important;
  }
}

::ng-deep {
  .mat-option.mat-active,
  .mat-option:hover {
    background: none !important;
  }

  ::-webkit-scrollbar {
    display: none;
  }
}

.job_board {
  width: 75%;
  border-right: 1px solid #e7e7e7;
  background: #fff;
}

.find_job {
  height: 100px;
  background: #e7e7e747;
  padding: 20px 20px;
  // font-weight: 400;
  color: #707070;
  span {
    font-size: 24px;
    //  padding-left: 15px;
    color: #262626;
    color: #ffffff !important;
    opacity: 1;
    margin: 0px 0px 0px -15px;
  }
  .dash {
    display: flex;
    align-items: baseline;
    //  align-items: center;
    // padding-top: 15px;
    padding: 15px 0px 0px 18px;
    .view {
      padding-top: 15px;
      //color: #27BBEE;
      color: #1b4e9b;
      font-size: 12px !important;
      font-weight: 600 !important;
      cursor: pointer;
      text-decoration: underline;
    }
    .findtext {
      font-size: 12px !important;
      font-weight: 600 !important;
    }
  }
}

.banner_header {
  color: #fff;
  padding: 50px;
  position: relative;
  margin: auto;
  background-size: cover !important;
  background-repeat: no-repeat;
  background-position: left !important;
  // background: linear-gradient(#000000a3, #000000a3),
  // url(../../../../assets/images/dash-bg-img.png);
  // background-image: url(../../../../assets/images/dash-bg-img.png);
  //  url(../../../../assets/images/banner.svg);

  // .user {
  //   display: flex;
  //   align-items: center;
  //   justify-content: space-between;
  //   flex-direction: row;
  //   color: #fff !important;
  // }

  .quote {
    font-size: 34px;
    line-height: 45px;
    margin-left: 80%;

    div:nth-child(1) {
      font-weight: 300;
    }

    div:nth-child(2) {
      // background: #FFFFFF 0% 0% no-repeat padding-box;
      // opacity: 0.8;
      // backdrop-filter: blur(3px);
      // -webkit-backdrop-filter: blur(3px);
      background: #fff3;
      width: 500px;
      height: 50px;
      position: absolute;
      right: 0px;
      text-align: right;
      padding: 5px 55px;
      clip-path: polygon(4% 0, 100% 0, 100% 100%, 0 100%);

      .grad-text {
        //  background: transparent linear-gradient(89deg, #FFFFFF 0%, #41AFE0 4%, #8ABC2E 94%, #7BBC49 100%) 0% 0% no-repeat padding-box;
        background: transparent
          linear-gradient(90deg, #27bbee 0%, #40bbbd 58%, #88ba2f 100%) 0% 0%
          no-repeat padding-box;

        -webkit-background-clip: text;
        -webkit-text-fill-color: transparent;
        font-weight: 800;
      }
    }
  }
}
.job_title {
  //     text-align: left;
  font: normal normal normal 24px/63px Lato;
  //     letter-spacing: 0px;
  //     color: #FFFFFF;
  //     opacity: 1;
}
.custom-button {
  background: #ffffff 0% 0% no-repeat padding-box;
  border: 1px solid #1b4e9b;
  border-radius: 20px;
  opacity: 1;
  cursor: pointer;
  color: #1b4e9b;
  font-family: "Lato";
  margin-right: 10px;
  padding: 8px 15px;
}
.custom-button.active {
  background-color: #1b4e9b;
  color: #ffffff;
}
.allbtn {
  margin-left: 30px;
}
.search-bar {
  display: flex;
  align-items: center;
  background: #ffffff 0% 0% no-repeat padding-box;
  border: 1px solid #84848466;
  border-radius: 35px;
  opacity: 1;
  padding: 8px;
  margin: 0px 20px 0px 26px;
}

.search-bar input {
  background-color: transparent;
  border: 0px solid;
  height: 20px;
  width: 160px;
  color: #1b4e9b;
  outline: none;
  width: 100%;
}

.search-bar input:focus {
  border: 0px solid;
  width: 100%;
}
.editable-text {
  padding: 5px;
  border-radius: 5px;
  outline: none;
}

/* Optional: Style the div when it's in focus */
// .editable-text:focus {
//   border: 1px solid #333;
//   /* Replace #333 with the desired color */
// }
// .border_Placeholder{
//   width: 100%;
// }
.search_icon_ {
  color: #848484;
}

.results_dash {
  display: flex;
  // padding: 10px 20px 0px 20px;
  padding: 10px 45px 0px 40px;
  margin-top: 7px;
  justify-content: space-between;
  .arrow_grid {
    display: flex;
    justify-content: space-between;
    /* This will separate the child elements in one line */
    align-items: center;
    .icon-container {
      margin: 0px 0px 5px 10px;
    }
  }

  div {
    font-weight: 600;
  }

  .sort {
    display: flex;
    // margin: 0px 15px -10px 0px;
    .sortby_text {
      // margin: -1px 0px 0px 0px;
    }
  }
}
.name.skill-exchange {
  width: 156px;
  height: 22px;
  position: absolute;
  right: 0%;
  display: inline-block;
  background-image: linear-gradient(to left, #8abc2e, #25bcef);
  border-radius: 14px 0 0 14px;
  color: #ffffff;
  align-items: center;
  margin: 5px 0px 0px 0px;
}

.name.skill-exchange .text-overlay {
  text-align: center;
  /* Center the text horizontally */
  font: normal normal medium 8px/12px Lato;
  opacity: 1;
}
.flex-layout {
  ::ng-deep {
    .mat-select {
      width: 146px;
      padding: 0px 8px;
      // border: 1px solid #eee;
      border-radius: 5px;
      position: relative;
      // bottom: 5px;
      left: 5px;

      .mat-select-trigger {
        text-align: center;
      }
    }
    .mat-select-arrow {
      margin: 8px 4px 0px 4px;
          // padding: 0px 5px 4px 0px;
    }
.mat-select-arrow-wrapper{
            padding: 0px 5px 4px 0px;
}
    .mat-select-value {
      text-align: start;
    }

    .mat-option {
      background: #fff !important;
      color: lightgrey;
    }

    .panelPosition {
      .mat-select-min-line {
        color: #1b4e9b;
        font-weight: 400;
        position: relative;
        // top: 4px;
      }
    }
  }
}
/* ... */

